# packages/server/src/modules/guide/guide.module.ts
@@ -1,0 +1,5 @@
+import { Module } from "@nestjs/common";
+import { GuideController } from "./guide.controller";
+
+@Module({ controllers: [GuideController] })
+export class GuideModule {}
