# packages/server/src/modules/guide/index.ts
@@ -1,0 +1,2 @@
+export { GuideModule } from "./guide.module";
+export { GUIDE } from "./guide";
